# lnl_surrogate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
src/lnl_surrogate/: __init__.py  data_cache.py  get_surrogate_model.py  logger.py  surrogate_likelihood.py
src/lnl_surrogate/diagnostics/: learning_curve.py
src/lnl_surrogate/models/: __init__.py  base_model.py  gpflow_model.py  model_metrics.py  sklearn_gp_model.py  sklearn_mlp_model.py  tf_dnn_model.py  utils.py
src/lnl_surrogate/plotting/: __init__.py  core.py  image_utils.py  model_corner.py
tests/: conftest.py  test_datacache.py  test_model_enum.py  test_models.py
