[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["lnl_surrogate*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["lnl_surrogate.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


[project]
name = "lnl_surrogate"
dynamic = ["version"] # scm versioning (using tags)
requires-python = ">=3.8"
description = "Build a surrogate for your LnL(d|θ)± ΔLnL(d|θ)"
readme = "README.md"
authors = [
    {name = "Avi Vajpeyi", email = "avi.vajpeyi@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "scikit-learn",
    "gpflow",
    "tensorflow",
    "xarray",
    "matplotlib",
    "numpy",
    "pandas",
    "corner",
    "tqdm",
    "netcdf4",
    "StrEnum" # introduced in py3.11, need to manually install for now
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=4.1.0",
    "coverage[toml]",
    "pre-commit",
    "flake8>=5.0.4",
    "black>=22.12.0",
    "jupyter-book",
]

[tool.setuptools_scm]
version_file = "src/lnl_surrogate/_version.py"


[project.urls]  # Optional
"Homepage" = "https://github.com/avivajpeyi/lnl_surrogate"
"Bug Reports" = "https://github.com/avivajpeyi/lnl_surrogate/issues"
"Source" = "https://github.com/avivajpeyi/lnl_surrogate/"



[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79


[tool.pytest.ini_options]
testpaths = ["tests"]
line_length = 88
